# EuroEsp

./: CMakeLists.txt  sdkconfig.defaults  todo.md
main/: CMakeLists.txt  adc.c  adcCon.c  dac.c  defines.h  display.c  graphic.cpp  idf_component.yml  main.c  main.h  oldmain.c  program.c  pwm.c  update copy.c  update.c
main/init/: adcCon.c  dac.c  digital.c  display copy.c  display.c  displayold.c  encoder.c  lvgl.c  pwm.c
main/old/: adc.c  update copy.c
main/screens/: adsr.cpp  adsr.h  scope.cpp  scope.h  screen.cpp  screen.h  vco.cpp  vco.h
main/src/: defines.h  graphic.cpp  graphic.h  main.c  main.h  update.c  update.h
main/src/peripherals/adc/: adc.c  adc.h
main/src/peripherals/dac/: dac.c  dac.h
main/src/peripherals/digital/: digital.c  digital.h
main/src/peripherals/display/: display.c  display.h
main/src/peripherals/encoder/: encoder.c  encoder.h
main/src/peripherals/lvgl/: lvgl.c  lvgl.h
main/src/peripherals/pwm/: pwm.c  pwm.h
main/src/screens/: adsr.cpp  adsr.h  scope.cpp  screen.cpp  screen.h  vco.cpp  vco.h  widgets copy.cpp.old  widgets.cpp  widgets.h
main/src/screens/adsr/: adsr.cpp  adsr.h
main/src/screens/scope/: scope.cpp  scope.h
main/src/screens/vco/: vco.cpp  vco.h
main/src/utils/: values.h
main/src/widgets/monoled/: custom_monoled.c  custom_monoled.h  custom_monoled_private.h
main/utils/: libs.h
